--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -76,6 +76,12 @@ jobs:
     - uses: actions/checkout@v3
     - name: dependencies
       run: sudo apt update && sudo apt install libtesseract-dev libavformat-dev libswscale-dev
+    - name: Archive build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+       name: dist-without-markdown
+       path: |
+         build
     - name: cmake
       run: mkdir build && cd build && cmake -DWITH_OCR=ON -DWITH_HARDSUBX=ON ../src
     - name: build
@@ -87,7 +93,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: cache 
+      - name: cache
         uses: actions/cache@v2
         with:
           path: |
@@ -101,5 +107,5 @@ jobs:
           toolchain: 1.56.0
           override: true
       - name: build
-        run: cargo build 
+        run: cargo build
         working-directory: ./src/rust
