--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -74,12 +74,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: dependencies
       run: sudo apt update && sudo apt install libtesseract-dev libavformat-dev libswscale-dev
-    - name: Archive build artifacts
-      uses: actions/upload-artifact@v3
-      with:
-       name: dist-without-markdown
-       path: |
-         build
     - name: cmake
       run: mkdir build && cd build && cmake -DWITH_OCR=ON -DWITH_HARDSUBX=ON ../src
     - name: build
@@ -87,6 +81,12 @@ jobs:
       working-directory: build
     - name: Display version information
       run: ./build/ccextractor --version
+    - name: Archive build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: ccextractor-linux-build
+        path: |
+          build
   build_rust:
     runs-on: ubuntu-latest
     steps:
